# python-poetry-demo

./: .gitignore  README.md  pyproject.toml
src/: main.py
