[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ken <44661517+kenfj@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
